// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quote editorjs block parser should return empty quote 1`] = `
<blockquote class="de-quote">
  <p class="de-quote-text">
  </p>
  <cite class="de-quote-author">
  </cite>
</blockquote>
`;

exports[`quote editorjs block parser should return quote 1`] = `
<blockquote class="de-quote">
  <p class="de-quote-text">
    Text
  </p>
  <cite class="de-quote-author">
    Author
  </cite>
</blockquote>
`;

exports[`quote editorjs block parser should return quote with alignment 1`] = `
<blockquote style="text-align: center"
            class="de-quote"
>
  <p class="de-quote-text">
    Text
  </p>
  <cite class="de-quote-author">
    Author
  </cite>
</blockquote>
`;
